[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/game_session/hud/ability_hud.gd" type="Script" id=1]
[ext_resource path="res://ui/numeric_label.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 1

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.614334 )
colors = PoolColorArray( 0.298039, 0.298039, 0.298039, 0.498039 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )
width = 64

[sub_resource type="StyleBoxFlat" id=5]

[node name="AbilityHud" type="TextureRect"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = SubResource( 2 )
expand = true
stretch_mode = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CooldownProgress" type="TextureProgress" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
step = 0.01
texture_progress = SubResource( 4 )
fill_mode = 2
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CooldownLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
align = 1
script = ExtResource( 2 )

[node name="KeyLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -7.0
margin_bottom = 7.0
grow_horizontal = 2
custom_styles/normal = SubResource( 5 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
